Page Présentation fini

--- a/vue/css/style.css
+++ b/vue/css/style.css
@@ -1,5 +1,5 @@
 html,body{
-    background: #101010;
+    background: #1a1a1a;
 }
 a{
     color: inherit;
@@ -17,3 +17,4 @@ a{
     font-size: 3em;
     color: #3f4141;
 }
+
