--- a/vue/css/style.css
+++ b/vue/css/style.css
@@ -42,6 +42,15 @@ a{
     background: #1F2527;
     height: 100vh;
     display: none;
+    font-size: 2em;
+    padding: 0 5px;
+}
+#navPrincipale li a{
+    padding-left: 2em;
+}
+#contentNav li a{
+    text-wrap: none;
+
 }
 .boutonMenu
 {
@@ -51,6 +60,7 @@ a{
     height: 5em;
     line-height: 5em;
     margin: 0 auto;
+
 }
 .socialNetwork{
     position: absolute;
@@ -67,7 +77,67 @@ a{
 {
     color: #73A71A;
 }
+#navPrincipale .btnPerso
+{
+    font-size: .7em;
+    line-height: .8em;
+    padding: .9em 2em;
+    margin-top: 1.5em;
+    transition: all 500ms ease;
+    font-family: Arial, sans-serif;
+    letter-spacing: 4px;
+}
 
+#navPrincipale .btnPerso:hover,
+#navPrincipale .btnPerso:focus,
+#navPrincipale .btnPerso:active{
+    background: #3f4141;
+    color: #4AADC7;
+    border: 1px solid #4AADC7;
+    outline: 0;
+}
+#nav-presentation{
+    display: flex;
+    margin-top: 1.2em;
+}
+#nav-presentation .btnColle{
+    display: inline-block;
+    margin: 0;
+}
+#nav-presentation .btnColleG{
+    width: 80%;
+    border-radius: 4px 0 0 4px;
+
+}
+#nav-presentation .btnColleD{
+    width: 20%;
+    border-radius: 0 4px 4px 0;
+    text-align: center;
+    padding-left: 1em;
+}
+#content-nav-presentation{
+    margin-left: 2em;
+    background: #562431;
+    border-radius: 4px;
+    margin-top: 1em;
+}
+#content-nav-presentation .btnPerso{
+    margin-top: 1em ;
+    margin-bottom: 1em;
+    color: #1a1a1a;
+}
+#content-nav-presentation .btnPerso:hover,
+#content-nav-presentation .btnPerso:focus,
+#content-nav-presentation .btnPerso:active{
+    border: none;
+    color: #E03A67;
+    background: #562431;
+}
+#navLegale{
+    position: absolute;
+    bottom: 1em;
+    width: calc(100% - 10px);
+}
 /***
 ** Contenu principal
 **/
@@ -77,7 +147,6 @@ a{
     border: 0;
     box-sizing: border-box;
 }
-
 #accueil img{
     width: 60vw;
     height: auto;
@@ -95,52 +164,9 @@ a{
 /********************Page Artistes********CHAMPY*******/
 
                     /*Onglets*/
-#page-artiste .nav a
-{
-    height: 7vh;
-    padding: 0;
-    line-height: 7vh;
-    margin-bottom: 1em;
-
-    color: #562431;
-    font-size: 2em;
-    font-weight: bold;
-}
-
-#page-artiste .nav a:hover
-{
-    color: #E03A67;
-    background-color: #562431;
-}
-
-#page-artiste .nav a:focus
-{
-    color: #E03A67;
-    background-color: #562431;
-}
-
-#page-artiste #pack1, #page-artiste #pack2, #page-artiste #pack3, a ,li
-{
-    color: #2aabd2;
-}
 
                     /*Content Onglets*/
-#page-artiste p
-{
-    text-align: left;
-    color: white;
-}
 
-#page-artiste .tab-content
-{
-    border: solid 5px #1F2527;
-    height: 60vh;
-    width: 81.5vw;
-    margin: 0 auto;
-    text-align: center;
-    background: url("../images/casque2.png") no-repeat right center;
-    background-size: 30%;
-}
 
 
 /********************FIN Page Artistes********CHAMPY*******/
@@ -148,93 +174,15 @@ a{
 /********************Page Associations********CHAMPY*******/
 
 /*Onglets*/
-#page-asso .nav a
-{
-    height: 7vh;
-    padding: 0;
-    line-height: 7vh;
-    margin-bottom: 1em;
-    color: #28464e;
-    font-size: 2em;
-    font-weight: bold;
-}
 
-#page-asso .nav a:hover
-{
-    color: #4AADC7;
-    background-color: #28464e;
-}
-
-#page-asso .nav a:focus
-{
-    color: #4AADC7;
-    background-color: #28464e;
-}
-
-#page-asso #pack1, #page-asso #pack2, #page-asso #pack3, a ,li
-{
-    color: #2aabd2;
-}
-
-<<<<<<< HEAD
-/*Content Onglets*/
-#page-asso .tab-content
-{
-    border: solid 5px #1F2527;
-    height: 60vh;
-    width: 81.5vw;
-    margin: 0 auto;
-    text-align: center;
-    background: url("../images/icone-asso2.png") no-repeat center center;
-    background-size: 30%;
-}
 
 /********************FIN Page Associations********CHAMPY*******/
 
 /********************Page Entreprises********CHAMPY*******/
 
 /*Onglets*/
-#page-entreprise .nav a
-{
-    height: 7vh;
-    padding: 0;
-    line-height: 7vh;
-    margin-bottom: 1em;
-    color: #2B351A;
-    font-size: 2em;
-    font-weight: bold;
-}
-
-#page-entreprise .nav a:hover
-{
-    color: #73A71A;
-    background-color: #2B351A;
-}
-
-#page-entreprise .nav a:focus
-{
-    color: #73A71A;
-    background-color: #2B351A;
-}
-
-#page-entreprise #pack1, #page-entreprise #pack2, #page-entreprise #pack3, a ,li
-{
-    color: #2aabd2;
-}
 
 /*Content Onglets*/
-#page-entreprise .tab-content
-{
-    border: solid 5px #1F2527;
-    height: 60vh;
-    width: 81.5vw;
-    margin: 0 auto;
-    text-align: center;
-    background: url("../images/icone-entreprises-fond-gris.png") no-repeat center center;
-    background-size: 30%;
-}
 
 /********************FIN Page Entreprises********CHAMPY*******/
 
-=======
->>>>>>> refs/remotes/origin/master
